--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.0",
     "sass": "^1.87.0",
+    "yup": "^1.6.1",
     "zod": "^3.24.4",
     "zustand": "^5.0.4"
   },
